force-app/main/default/objects/Booking__c/fields/Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges__c</fullName>
    <label>Other Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>