force-app/main/default/objects/Booking__c/fields/OtherCharges__c.field-meta.xml
<CustomField>
    <fullName>OtherCharges__c</fullName>
    <label>Other Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>