force-app/main/default/objects/Booking__c/fields/Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bookings (Partner  Contact)</relationshipLabel>
    <relationshipName>BookingToPartnerContact</relationshipName>
    <type>Lookup</type>
</CustomField>