force-app/main/default/objects/Booking__c/fields/PartnerContact__c.field-meta.xml
<CustomField>
    <fullName>PartnerContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner  Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bookings (Partner  Contact)</relationshipLabel>
    <relationshipName>Bookings3</relationshipName>
    <type>Lookup</type>
</CustomField>