force-app/main/default/objects/Booking__c/fields/Phone1__c.field-meta.xml
<CustomField>
    <fullName>Phone1__c</fullName>
    <formula>PrimaryContact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone 1</label>
    <type>Text</type>
</CustomField>