force-app/main/default/objects/Booking__c/fields/Phone1_Partner__c.field-meta.xml
<CustomField>
    <fullName>Phone1_Partner__c</fullName>
    <formula>Partner_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone 1 (partner)</label>
    <type>Text</type>
</CustomField>