force-app/main/default/objects/Booking__c/fields/Phone2__c.field-meta.xml
<CustomField>
    <fullName>Phone2__c</fullName>
    <formula>PrimaryContact__r.HomePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone 2</label>
    <type>Text</type>
</CustomField>