force-app/main/default/objects/Booking__c/fields/Phone2Partner__c.field-meta.xml
<CustomField>
    <fullName>Phone2Partner__c</fullName>
    <formula>PartnerContact__r.HomePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone 2 (partner)</label>
    <type>Text</type>
</CustomField>