force-app/main/default/objects/Booking__c/fields/Phone_Partner__c.field-meta.xml
<CustomField>
    <fullName>Phone_Partner__c</fullName>
    <formula>Partner_Contact__r.Phone</formula>
    <label>Phone (partner)</label>
    <type>Text</type>
</CustomField>