force-app/main/default/objects/Booking__c/fields/Post__c.field-meta.xml
<CustomField>
    <fullName>Post__c</fullName>
    <formula>Primary_Contact__r.Individual.Post__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post</label>
    <type>Checkbox</type>
</CustomField>