force-app/main/default/objects/Booking__c/fields/PractitionerEmail__c.field-meta.xml
<CustomField>
    <fullName>PractitionerEmail__c</fullName>
    <description>Used for sending email to practitioner</description>
    <inlineHelpText>Used for sending email to practitioner</inlineHelpText>
    <label>PractitionerEmail</label>
    <type>Email</type>
</CustomField>