force-app/main/default/objects/Booking__c/fields/Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone__c</fullName>
    <formula>TEXT(Primary_Contact__r.npe01__PreferredPhone__c)</formula>
    <label>Preferred phone</label>
    <type>Text</type>
</CustomField>