force-app/main/default/objects/Booking__c/fields/Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Email__c</fullName>
    <formula>Primary_Contact__r.Email</formula>
    <label>Primary Contact Email</label>
    <type>Text</type>
</CustomField>