force-app/main/default/objects/Booking__c/fields/PSA_Area__c.field-meta.xml
<CustomField>
    <fullName>PSA_Area__c</fullName>
    <formula>TEXT(Branch__r.PSA_Area__c)</formula>
    <label>PSAArea</label>
    <type>Text</type>
</CustomField>