force-app/main/default/objects/Booking__c/fields/PSA_Area_When_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>PSA_Area_When_Confirmed__c</fullName>
    <label>PSA Area When Confirmed</label>
    <length>3</length>
    <type>Text</type>
</CustomField>