force-app/main/default/objects/Booking__c/fields/PSA_Office__c.field-meta.xml
<CustomField>
    <fullName>PSA_Office__c</fullName>
    <formula>Course__r.PSA_Area__c</formula>
    <label>PSA Office</label>
    <type>Text</type>
</CustomField>