force-app/main/default/objects/Booking__c/fields/PSAArea__c.field-meta.xml
<CustomField>
    <fullName>PSAArea__c</fullName>
    <formula>TEXT(Branch__r.PSA_Area__c)</formula>
    <label>PSAArea</label>
    <type>Text</type>
</CustomField>