force-app/main/default/objects/Booking__c/fields/RecurringPaymentAmountNotYetCollected__c.field-meta.xml
<CustomField>
    <fullName>RecurringPaymentAmountNotYetCollected__c</fullName>
    <label>Recurr. Payment Amount Not Yet Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>