force-app/main/default/objects/Booking__c/fields/Reservation_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Expiry_Date__c</fullName>
    <label>Reservation Expiry Date</label>
    <type>Date</type>
</CustomField>