force-app/main/default/objects/Booking__c/fields/ReservationExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ReservationExpiryDate__c</fullName>
    <label>Reservation Expiry Date</label>
    <type>Date</type>
</CustomField>