force-app/main/default/objects/Booking__c/fields/SMS__c.field-meta.xml
<CustomField>
    <fullName>SMS__c</fullName>
    <formula>Primary_Contact__r.Individual.SMS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMS text</label>
    <type>Checkbox</type>
</CustomField>