force-app/main/default/objects/Booking__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <defaultValue>&apos;Enquiry&apos;</defaultValue>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Booking_Type</valueSetName>
    </valueSet>
</CustomField>