force-app/main/default/objects/Booking__c/fields/StreetAddress__c.field-meta.xml
<CustomField>
    <fullName>StreetAddress__c</fullName>
    <formula>PrimaryContact__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street Address</label>
    <type>Text</type>
</CustomField>