force-app/main/default/objects/Booking__c/fields/Suggested_Cancellation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Cancellation_Fee__c</fullName>
    <formula>IF( NOT(ISPICKVAL(Status__c, &quot;Confirmed&quot;)),
 0,
 IF( AND(Days_Before_Course_Start__c &gt;= 28, Course_Fee__c &gt; 30), 
  Course_Fee__c - 30,
  IF( AND(Days_Before_Course_Start__c &lt; 28, Days_Before_Course_Start__c &gt;= 14), 
   IF(Course_Fee__c &gt;= 60, 
    Course_Fee__c * 0.5,
    IF(AND(Course_Fee__c &gt; 30, Course_Fee__c &lt; 60),
     Course_Fee__c - 30,
     0
    )
   ),
   0
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Suggested cancellation fee. If no course fee paid, no cancellation fee should be applied</inlineHelpText>
    <label>Suggested Cancellation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>