force-app/main/default/objects/Booking__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <formula>Primary_Contact__r.Individual.Telephone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telephone</label>
    <type>Checkbox</type>
</CustomField>