force-app/main/default/objects/Booking__c/fields/Terms_And_Conditions_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Terms_And_Conditions_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms And Conditions Accepted</label>
    <type>Checkbox</type>
</CustomField>