force-app/main/default/objects/Booking__c/fields/Total_Open_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Bookings__c</fullName>
    <formula>Primary_Contact__r.Total_Open_Bookings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Open Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>