force-app/main/default/objects/Booking__c/fields/TotalOpenBookings__c.field-meta.xml
<CustomField>
    <fullName>TotalOpenBookings__c</fullName>
    <formula>PrimaryContact__r.TotalOpenBookings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Open Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>