force-app/main/default/objects/Booking__c/fields/Town__c.field-meta.xml
<CustomField>
    <fullName>Town__c</fullName>
    <formula>Primary_Contact__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Town</label>
    <type>Text</type>
</CustomField>