force-app/main/default/objects/Booking__c/fields/Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Date__c</fullName>
    <description>The date on which the booking was last transferred from one course to another.</description>
    <label>Transfer Date</label>
    <type>DateTime</type>
</CustomField>