force-app/main/default/objects/Booking__c/fields/Transfer_Reason__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Reason__c</fullName>
    <label>Transfer Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preferred course (location)</fullName>
            </value>
            <value>
                <fullName>Preferred course (format)</fullName>
            </value>
            <value>
                <fullName>Preferred course (dates)</fullName>
            </value>
            <value>
                <fullName>Preferred course (content)</fullName>
            </value>
            <value>
                <fullName>Too expensive</fullName>
            </value>
            <value>
                <fullName>Personal tragedy</fullName>
            </value>
            <value>
                <fullName>Health problems</fullName>
            </value>
            <value>
                <fullName>Moving</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>NCT changed course</fullName>
            </value>
            <value>
                <fullName>NCT cancelled course</fullName>
            </value>
            <value>
                <fullName>Unhappy with small group size</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>