force-app/main/default/objects/Booking__c/fields/Under_18__c.field-meta.xml
<CustomField>
    <fullName>Under_18__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under 18</label>
    <type>Checkbox</type>
</CustomField>