force-app/main/default/objects/Booking__c/fields/Validation_Code__c.field-meta.xml
<CustomField>
    <fullName>Validation_Code__c</fullName>
    <formula>TEXT(MCEILING(SQRT(VALUE(TEXT(MONTH(DATEVALUE(CreatedDate))) 
&amp; TEXT(DAY(DATEVALUE(CreatedDate)))  
&amp; TEXT(MINUTE(TIMEVALUE(CreatedDate))) 
&amp; TEXT(SECOND(TIMEVALUE(CreatedDate))) 
&amp; TEXT(MILLISECOND(TIMEVALUE(CreatedDate))) 
&amp;  RIGHT(Name, LEN(Name) - 1)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validation Code</label>
    <type>Text</type>
</CustomField>