force-app/main/default/objects/Booking__c/validationRules/Course_Status_Must_Be_Final.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_Status_Must_Be_Final</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(Course__r.Status__c, &#39;Final&#39;)),
  ISPICKVAL(Status__c, &#39;Reserved&#39;),
  NOT($Permission.Override_Booking_Validation) 
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You can only add reservations to courses in a status of final.</errorMessage>
</ValidationRule>