force-app/main/default/objects/Booking__c/validationRules/ExpirationDateCannotBeInPast.validationRule-meta.xml
<ValidationRule>
    <fullName>ExpirationDateCannotBeInPast</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 PRIORVALUE( Reservation_Expiry_Date__c ) &gt; Reservation_Expiry_Date__c,   
 ISPICKVAL(Status__c, &quot;Expired&quot;)
)</errorConditionFormula>
    <errorDisplayField>Reservation_Expiry_Date__c</errorDisplayField>
    <errorMessage>Expiration date cannot be in the past</errorMessage>
</ValidationRule>