force-app/main/default/objects/Booking__c/validationRules/ExpirationDateCannotBeReduced.validationRule-meta.xml
<ValidationRule>
    <fullName>ExpirationDateCannotBeReduced</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 PRIORVALUE(Reservation_Expiry_Date__c) &gt; Reservation_Expiry_Date__c,
OR(
 ISPICKVAL(Status__c, &quot;Expired&quot;),
 ISPICKVAL(Status__c, &quot;Reserved&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>Reservation_Expiry_Date__c</errorDisplayField>
    <errorMessage>Expiration date cannot be reduced</errorMessage>
</ValidationRule>