force-app/main/default/objects/Booking__c/validationRules/ExpiredDataCanNotBeLess.validationRule-meta.xml
<ValidationRule>
    <fullName>ExpiredDataCanNotBeLess</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 PRIORVALUE( Reservation_Expiry_Date__c ) &gt; Reservation_Expiry_Date__c,   
 ISPICKVAL(Status__c, &quot;Expired&quot;)
)</errorConditionFormula>
    <errorDisplayField>Reservation_Expiry_Date__c</errorDisplayField>
    <errorMessage>Reservation Expiry Date can&#39;t be a less than a new set a date.</errorMessage>
</ValidationRule>