force-app/main/default/objects/Booking__c/validationRules/ExpiryDateCantBeMoreThanDateStartCourse.validationRule-meta.xml
<ValidationRule>
    <fullName>ExpiryDateCantBeMoreThanDateStartCourse</fullName>
    <active>true</active>
    <errorConditionFormula>Reservation_Expiry_Date__c &gt; Course__r.Start_Date__c</errorConditionFormula>
    <errorDisplayField>Reservation_Expiry_Date__c</errorDisplayField>
    <errorMessage>Reservation the expiration date cannot be more than the start date of the course.</errorMessage>
</ValidationRule>