force-app/main/default/objects/Booking__c/validationRules/FeeOverrideAmountRestriction.validationRule-meta.xml
<ValidationRule>
    <fullName>FeeOverrideAmountRestriction</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(ISNEW(),
       ISCHANGED(Fee_Override__c)),
    Fee_Override__c &gt; Course_Fee__c,
    NOT($Permission.Override_Booking_Validation)
)</errorConditionFormula>
    <errorDisplayField>Fee_Override__c</errorDisplayField>
    <errorMessage>Fee override can&apos;t be Greater than a Course fee.</errorMessage>
</ValidationRule>