force-app/main/default/objects/Booking__c/validationRules/FeeOverrideRestriction.validationRule-meta.xml
<ValidationRule>
    <fullName>FeeOverrideRestriction</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK( FeeOverride__c )) &amp;&amp; ISPICKVAL(FeeOverrideReason__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>FeeOverrideReason__c</errorDisplayField>
    <errorMessage>Please fill in Fee Override Reason.</errorMessage>
</ValidationRule>