force-app/main/default/objects/Booking__c/validationRules/InappropriateStatusTransition.validationRule-meta.xml
<ValidationRule>
    <fullName>InappropriateStatusTransition</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(
        OR(
            (ISPICKVAL(PRIORVALUE(Status__c ), &quot;Enquiry&quot;) &amp;&amp; ISPICKVAL(Status__c, &quot;Reserved&quot;) ), 
            (ISPICKVAL(PRIORVALUE(Status__c ), &quot;Expired&quot;) &amp;&amp; ISPICKVAL(Status__c, &quot;Reserved&quot;) ),
            (ISPICKVAL(PRIORVALUE(Status__c ), &quot;Reserved&quot;) &amp;&amp; ISPICKVAL(Status__c, &quot;Expired&quot;) ),
            (ISPICKVAL(PRIORVALUE(Status__c ), &quot;Reserved&quot;) &amp;&amp; ISPICKVAL(Status__c, &quot;Confirmed&quot;) ), 
            ISPICKVAL(Status__c, &quot;Cancelled&quot;),
            (ISPICKVAL(PRIORVALUE(Status__c ), &quot;Cancelled&quot;) &amp;&amp; ISPICKVAL(Status__c, &quot;Enquiry&quot;) )
        )
    ),
    ISCHANGED(Status__c )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Inappropriate status transition. (Possible options: Enquiry - Reserved, Expired - Reserved, All statuses - Cancelled, Cancelled - Enquiry).</errorMessage>
</ValidationRule>