force-app/main/default/objects/Booking__c/validationRules/MandatoryBirthDate.validationRule-meta.xml
<ValidationRule>
    <fullName>MandatoryBirthDate</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Birth_Due_Date__c )</errorConditionFormula>
    <errorMessage>Please fill in Birth/Due date.</errorMessage>
</ValidationRule>