force-app/main/default/objects/Booking__c/validationRules/MandatoryCancellationReason.validationRule-meta.xml
<ValidationRule>
    <fullName>MandatoryCancellationReason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Cancelled&quot;) &amp;&amp;
ISBLANK(TEXT(Cancellation_Reason__c))</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Please select a cancellation reason</errorMessage>
</ValidationRule>