force-app/main/default/objects/Booking__c/validationRules/MandatoryPartnerContactField.validationRule-meta.xml
<ValidationRule>
    <fullName>MandatoryPartnerContactField</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Partner_Contact__r.Email),
Partner_Contact__c != NULL,
NOT($Permission.Override_Booking_Validation)
)</errorConditionFormula>
    <errorMessage>Please review partner contact. Email is required.</errorMessage>
</ValidationRule>