force-app/main/default/objects/Booking__c/validationRules/MandatoryPrimaryContactFields.validationRule-meta.xml
<ValidationRule>
    <fullName>MandatoryPrimaryContactFields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(
ISBLANK(Primary_Contact__r.FirstName) ||
ISBLANK(Primary_Contact__r.LastName) ||
ISBLANK(Primary_Contact__r.MailingCity) ||
ISBLANK(Primary_Contact__r.MailingPostalCode) ||
ISBLANK( Primary_Contact__r.Email ) ||
ISBLANK( Primary_Contact__r.MailingStreet ) ||
ISBLANK( Primary_Contact__r.Phone )
),  Primary_Contact__c != NULL)</errorConditionFormula>
    <errorMessage>Please review primary contact. Full name, full address, email and phone (Mobile or Home Phone) are required.</errorMessage>
</ValidationRule>