force-app/main/default/objects/Booking__c/validationRules/Prevent_Bookings_on_Cancelled_Courses.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Bookings_on_Cancelled_Courses</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(IsNew(),
       AND(IsChanged(Status__c),
           NOT(OR(ISPICKVAL(Status__c, &quot;Expired&quot;),
                  ISPICKVAL(Status__c, &quot;Cancelled&quot;))))),
    OR(ISPICKVAL(Course__r.Status__c, &quot;Cancelling&quot;), 
       ISPICKVAL(Course__r.Status__c, &quot;Cancelled&quot;)),
    NOT($Permission.Override_Booking_Validation))</errorConditionFormula>
    <errorMessage>Invalid action. Course is being cancelled.</errorMessage>
</ValidationRule>