force-app/main/default/objects/Booking__c/validationRules/Prevent_Manual_Transfer.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Manual_Transfer</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED( Course__c ),
NOT( ISCHANGED( Transfer_Date__c )),
NOT($Permission.Override_Booking_Validation)
)</errorConditionFormula>
    <errorDisplayField>Course__c</errorDisplayField>
    <errorMessage>Booking cannot be transferred manually. Please use the Transfer button.</errorMessage>
</ValidationRule>