force-app/main/default/objects/Booking__c/validationRules/Prevent_Overbooking_Of_Course.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Overbooking_Of_Course</fullName>
    <active>true</active>
    <description>Prevent further bookings being added to a course if Remaning Places is 0, unless the Allow Overbooking Flag is set.</description>
    <errorConditionFormula>AND(Course__r.Remaining_Places__c &lt; 1,  Course__r.Overbooking_allowed__c  = FALSE, NOT($Permission.Override_Booking_Validation))</errorConditionFormula>
    <errorMessage>There are currently no remaining places on this course and overbooking has not been allowed by the course administrator.</errorMessage>
</ValidationRule>