force-app/main/default/objects/Booking__c/validationRules/PreventConfirmedBookingCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventConfirmedBookingCreation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(ISCHANGED(Status__c), ISNEW()), ISPICKVAL(Status__c, &#39;Confirmed&#39;),  NOT($Setup.Booking_Permission__c.Allow_Confirmed_Status__c) )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You don&#39;t have permission to set status to confirmed.</errorMessage>
</ValidationRule>