force-app/main/default/objects/Booking__c/validationRules/ReservationExpiryDateCannotBeRemoved.validationRule-meta.xml
<ValidationRule>
    <fullName>ReservationExpiryDateCannotBeRemoved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Reservation_Expiry_Date__c),
    ISBLANK(Reservation_Expiry_Date__c),
    NOT($Permission.Override_Booking_Validation) 
)</errorConditionFormula>
    <errorDisplayField>Reservation_Expiry_Date__c</errorDisplayField>
    <errorMessage>Reservation Expiry Date can not be removed.</errorMessage>
</ValidationRule>