force-app/main/default/objects/Booking__c/listViews/All_Bookings.listView-meta.xml
<ListView>
    <fullName>All_Bookings</fullName>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>PSA_Office__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Bookings</label>
</ListView>