force-app/main/default/objects/Booking__c/listViews/All_Enquiries.listView-meta.xml
<ListView>
    <fullName>All_Enquiries</fullName>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Enquiry</value>
    </filters>
    <label>All Enquiries</label>
</ListView>