force-app/main/default/objects/Booking__c/listViews/Reservations.listView-meta.xml
<ListView>
    <fullName>Reservations</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Primary_Contact__c</columns>
    <columns>PSA_Office__c</columns>
    <columns>Course__c</columns>
    <columns>Course_Sub_Type__c</columns>
    <columns>Course_Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Days_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PSA_Office__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Reserved</value>
    </filters>
    <label>Reservations</label>
</ListView>