force-app/main/default/objects/Booking__c/listViews/X1C_Enquiries.listView-meta.xml
<ListView>
    <fullName>X1C_Enquiries</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Primary_Contact__c</columns>
    <columns>PSA_Office__c</columns>
    <columns>Course__c</columns>
    <columns>Course_Sub_Type__c</columns>
    <columns>Course_Start_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Course_Type__c</field>
        <operation>notEqual</operation>
        <value>Drop In</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Enquiry</value>
    </filters>
    <filters>
        <field>PSA_Office__c</field>
        <operation>equals</operation>
        <value>1C</value>
    </filters>
    <label>1C - Enquiries</label>
    <sharedTo>
        <group>X1C_PSA_Area</group>
    </sharedTo>
</ListView>